fix: Allow wrapping to small sizes

--- a/src/style.css
+++ b/src/style.css
@@ -24,11 +24,13 @@
 .filmForm header {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 .filmForm form {
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  flex-wrap: wrap;
 }
 /* Search bar input will be bigger than it's siblings */
 .filmForm form .searchBar {
